--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_swiper: ^1.1.6
   flutter_login: ^1.0.14
   dio: ^3.0.10
+  #屏幕适配插件
+  flutter_screenutil: ^2.3.0
 
 dev_dependencies:
   flutter_test:
